fix: align component Banner Certificates

--- a/src/components/BannerCertificates/index.module.css
+++ b/src/components/BannerCertificates/index.module.css
@@ -15,7 +15,7 @@
   flex-direction: row;
   gap: 10px;
   flex: 1;
-  
+  justify-content: center;
 }
 
 .title {
